--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <!-- Prevent mobile zoom quirks; keep inputs >=16px to avoid iOS zoom -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>Glassy Social - Modern Social Media Platform</title>
+  <title>- Modern Social Media Platform</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -185,7 +185,7 @@
                 <span className="text-white font-bold text-sm">GS</span>
               </div>
               <div>
-                <h1 className="text-white text-xl font-bold leading-tight">Glassy Social</h1>
+                <h1 className="text-white text-xl font-bold leading-tight">Modern social platform</h1>
                 <p className="text-white/70 text-xs -mt-0.5">by talha</p>
               </div>
             </div>
